--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ dist-ssr
 .env.local
 .env
 
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
@@ -24,3 +25,4 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+.vercel
